--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="embed embed-16by9">
     <div class="embed-item">
       <svg class="img-flex" id="unicorns-of-the-sea" width="1920" height="1080" viewBox="0 0 1920 1080">
-        <path fill="#78a2b3" d="M0 0h1920v1080H0z"/>
+        <rect width="1920px" height="1080px" fill="#78a2b3" />
         <g fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="12.37">
           <path id="rainbow-violet" stroke="#ff00e6" d="M186.8 1080a1315.5 1315.5 0 0 1 155.3-162.6c72.4-64.3 154.6-124.1 244.3-177.9 173.7-104.2 373.5-185.4 593.8-241.2s456.1-84.7 696.8-84.7c14.4 0 28.7.1 43 .3"/>
           <path id="rainbow-indigo" stroke="#9500ff" d="M267.9 1080a1284.5 1284.5 0 0 1 118-119c69.4-61.7 148.4-119.2 234.8-170.9 168.2-100.9 362.1-179.6 576.1-233.9 216.2-54.8 445.1-82.6 680.2-82.6 14.4 0 28.7.1 43 .3"/>
@@ -33,7 +33,6 @@
   </div>
 
   <h1>Unicorns of the sea</h1>
-
 
 </body>
 </html>
